Logica declaração de eventos botões editar e excluir finalizada

--- a/templates/partials/accounts/lista_grupos.html
+++ b/templates/partials/accounts/lista_grupos.html
@@ -3,6 +3,7 @@
 
 <main id="main-content" class="container-fluid py-4">
   <div id="identificador-tela" 
+       data-tela="lista_grupos"
        data-entidade-singular="grupo"
        data-entidade-plural="grupos"
        data-url-editar="{% url 'accounts:editar_grupo' 0 %}"
