--- a/templates/partials/nota_fiscal/importar_xml.html
+++ b/templates/partials/nota_fiscal/importar_xml.html
@@ -6,7 +6,7 @@
     <div class="card shadow-sm mx-auto" style="max-width: 1200px;">
       <div class="card-body">
         <h2 class="mb-4 text-center">Importar Nota Fiscal (XML)</h2>
-        <form id="form-importar-xml" method="post" enctype="multipart/form-data" action="{% url 'nota_fiscal:api_importar_xml_nfe' %}">
+        <form id="form-importar-xml" class="ajax-form" method="post" enctype="multipart/form-data" action="{% url 'nota_fiscal:api_importar_xml_nfe' %}">
           {% csrf_token %}
           <div class="row mb-3 align-items-end">
             <div class="col-md-8">
