--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,7 @@
   <link rel="stylesheet" href="{% static 'layout_switcher/css/switcher.css' %}">
 </head>
 <body class="{% if request.user.is_authenticated %}logged-in{% endif %}" id="page-body">
+  <script>window.pageInitializers = {};</script> <!-- ✅ Garante que o objeto global exista -->
   
   {% include 'layout_switcher/navbar.html' %}
   
