Ajuste botoes editar e excluir e importação xml

--- a/templates/partials/accounts/editar_usuario.html
+++ b/templates/partials/accounts/editar_usuario.html
@@ -3,6 +3,7 @@
 {% if perms.accounts.change_user %}
 
 <main id="main-content" class="container-fluid py-4" data-page="editar_usuario">
+  <div id="identificador-tela" data-tela="editar_usuario"></div>
   <!-- 🔔 Mensagens instantâneas -->
   
 
