--- a/templates/partials/nota_fiscal/importar_xml.html
+++ b/templates/partials/nota_fiscal/importar_xml.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<main id="main-content" class="container-fluid py-4" data-page="importar-xml" data-api-url="{% url 'nota_fiscal:api_processar_importacao_xml' %}"> data-api-url="{% url 'nota_fiscal:api_processar_importacao_xml' %}">
+<main id="main-content" class="container-fluid py-4" data-page="importar-xml" data-api-url="{% url 'nota_fiscal:api_processar_importacao_xml' %}">
   
   <div id="identificador-tela" data-tela="importar-xml">
     <div class="card shadow-sm mx-auto" style="max-width: 1200px;">
