--- a/templates/partials/nova_empresa/categoria_form.html
+++ b/templates/partials/nova_empresa/categoria_form.html
@@ -3,6 +3,7 @@
 {% load widget_tweaks %}
 
 <div class="container my-4">
+  <div id="identificador-tela" data-tela="categoria_form"></div>
   <div class="card shadow p-4 mx-auto" style="max-width: 600px;">
 
     <!-- 🔖 Título -->
