--- a/templates/partials/accounts/editar_grupo.html
+++ b/templates/partials/accounts/editar_grupo.html
@@ -1,4 +1,5 @@
 <main id="main-content" class="container-fluid py-4">
+  <div id="identificador-tela" data-tela="editar_grupo"></div>
   <div class="row justify-content-center">
     <div class="col-md-6">
       <div class="text-center mb-4">
