--- a/templates/partials/produtos/manutencao_ncm.html
+++ b/templates/partials/produtos/manutencao_ncm.html
@@ -1,5 +1,6 @@
 {% load static %}
 <div class="container-fluid" data-page="manutencao-ncm">
+  <div id="identificador-tela" data-tela="manutencao_ncm"></div>
   <div class="d-flex justify-content-between align-items-center mb-4">
     <h2 class="mb-0">Tabela NCM</h2>
     <button class="btn btn-outline-primary" id="btn-importar-ncm">
