--- a/layout_switcher/templates/layout_switcher/control.html
+++ b/layout_switcher/templates/layout_switcher/control.html
@@ -1,3 +1,6 @@
 <li>
     <a href="#" class="list-group-item" id="btn-alternar-layout">Layout Menu</a>
 </li>
+<li>
+    <a href="#" class="list-group-item" id="btn-alternar-tema">Alternar Tema</a>
+</li>
