--- a/layout_switcher/templates/layout_switcher/navbar.html
+++ b/layout_switcher/templates/layout_switcher/navbar.html
@@ -162,6 +162,7 @@
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarPerfil">
                         <li><a class="dropdown-item ajax-link" href="{% url 'accounts:edit_profile' %}">Editar Perfil</a></li>
                         <li><a class="dropdown-item" href="#" id="btn-alternar-layout-superior">Layout Menu</a></li>
+                        <li><a class="dropdown-item" href="#" id="btn-alternar-tema-superior">Alternar Tema</a></li>
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" id="logout-link-superior" href="{% url 'accounts:logout' %}">Sair</a></li>
                     </ul>
