App Produção refatorado Views Class-Based Views

--- a/layout_switcher/templates/layout_switcher/navbar.html
+++ b/layout_switcher/templates/layout_switcher/navbar.html
@@ -95,6 +95,7 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarProducao">
                         <li><a class="dropdown-item ajax-link" href="{% url 'producao:cadastrar_tanque' %}">Cadastrar Tanque</a></li>
                         <li><a class="dropdown-item ajax-link" href="{% url 'producao:lista_tanques' %}">Lista de Tanques</a></li>
+                        <li><a class="dropdown-item ajax-link" href="{% url 'producao:importar_curva' %}">Importar Curva</a></li>
                         <li><a class="dropdown-item ajax-link" href="{% url 'producao:cadastrar_curva' %}">Cadastrar Curva</a></li>
                         <li><a class="dropdown-item ajax-link" href="{% url 'producao:lista_curvas' %}">Lista de Curvas</a></li>
                         <li><a class="dropdown-item ajax-link" href="{% url 'producao:cadastrar_lote' %}">Cadastrar Lote</a></li>
