--- a/producao/templates/producao/alimentacao/lista_alimentacao.html
+++ b/producao/templates/producao/alimentacao/lista_alimentacao.html
@@ -1,6 +1,6 @@
 {% load static %}
 <div class="container-fluid mt-3" id="identificador-tela"
-    data-page="lista_alimentacao"
+    data-tela="lista_alimentacao"
     data-entidade-singular="alimentação diária"
     data-entidade-plural="alimentações diárias"
     data-url-editar="{% url 'producao:editar_alimentacao' pk=0 %}"
