--- a/producao/templates/producao/alimentacao/registrar_alimentacao.html
+++ b/producao/templates/producao/alimentacao/registrar_alimentacao.html
@@ -1,3 +1,4 @@
+<div id="identificador-tela" data-tela="registrar_alimentacao" class="d-none"></div>
 {% load static %}
 <div class="container-fluid mt-3">
     <h2>{% if form.instance.pk %}Editar Alimentação Diária{% else %}Registrar Nova Alimentação Diária{% endif %}</h2>
