--- a/producao/templates/producao/eventos/lista_eventos.html
+++ b/producao/templates/producao/eventos/lista_eventos.html
@@ -1,6 +1,6 @@
 {% load static %}
 <div class="container-fluid mt-3" id="identificador-tela"
-    data-page="lista_eventos"
+    data-tela="lista_eventos"
     data-entidade-singular="evento de manejo"
     data-entidade-plural="eventos de manejo"
     data-url-editar="{% url 'producao:editar_evento' pk=0 %}"
