--- a/producao/templates/producao/lotes/cadastrar_lote.html
+++ b/producao/templates/producao/lotes/cadastrar_lote.html
@@ -1,3 +1,4 @@
+<div id="identificador-tela" data-tela="cadastrar_lote" class="d-none"></div>
 {% load static %}
 <div class="container-fluid mt-3">
     <h2>{% if form.instance.pk %}Editar Lote{% else %}Cadastrar Novo Lote{% endif %}</h2>
