--- a/producao/templates/producao/tanques/cadastrar_tanque.html
+++ b/producao/templates/producao/tanques/cadastrar_tanque.html
@@ -1,3 +1,4 @@
+<div id="identificador-tela" data-tela="cadastrar_tanque" class="d-none"></div>
 {% load static %}
 <div class="container-fluid mt-3">
     <h2>{% if form.instance.pk %}Editar Tanque{% else %}Cadastrar Novo Tanque{% endif %}</h2>
