--- a/producao/templates/producao/tanques/lista_tanques.html
+++ b/producao/templates/producao/tanques/lista_tanques.html
@@ -1,6 +1,6 @@
 {% load static %}
 <div class="container-fluid mt-3" id="identificador-tela"
-    data-page="lista_tanques"
+    data-tela="lista_tanques"
     data-entidade-singular="tanque"
     data-entidade-plural="tanques"
     data-url-editar="{% url 'producao:editar_tanque' pk=0 %}"
