--- a/templates/base.html
+++ b/templates/base.html
@@ -160,6 +160,7 @@
               <ul class="list-group list-group-flush">
                 <li><a href="{% url 'producao:cadastrar_tanque' %}" class="list-group-item ajax-link">Cadastrar Tanque</a></li>
                 <li><a href="{% url 'producao:lista_tanques' %}" class="list-group-item ajax-link">Lista de Tanques</a></li>
+                <li><a href="{% url 'producao:importar_curva' %}" class="list-group-item ajax-link">Importar Curva</a></li>
                 <li><a href="{% url 'producao:cadastrar_curva' %}" class="list-group-item ajax-link">Cadastrar Curva</a></li>
                 <li><a href="{% url 'producao:lista_curvas' %}" class="list-group-item ajax-link">Lista de Curvas</a></li>
                 <li><a href="{% url 'producao:cadastrar_lote' %}" class="list-group-item ajax-link">Cadastrar Lote</a></li>
