--- a/producao/templates/producao/curvas/cadastrar_curva.html
+++ b/producao/templates/producao/curvas/cadastrar_curva.html
@@ -1,14 +1,16 @@
 {% load static %}
-<div class="container-fluid mt-3">
-    <h2>{% if form.instance.pk %}Editar Curva de Crescimento{% else %}Cadastrar Nova Curva de Crescimento{% endif %}</h2>
-    <div class="card shadow-sm">
-        <div class="card-body">
-            <form method="post" class="form-ajax" action="">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <button type="submit" class="btn btn-primary">Salvar</button>
-                <a href="{% url 'producao:lista_curvas' %}" class="btn btn-secondary ajax-link">Cancelar</a>
-            </form>
-        </div>
-    </div>
+<div id="identificador-tela" data-tela="cadastrar_curva">
+  <div class="container-fluid mt-3">
+      <h2>{% if form.instance.pk %}Editar Curva de Crescimento{% else %}Cadastrar Nova Curva de Crescimento{% endif %}</h2>
+      <div class="card shadow-sm">
+          <div class="card-body">
+              <form method="post" class="ajax-form" action="">
+                  {% csrf_token %}
+                  {{ form.as_p }}
+                  <button type="submit" class="btn btn-primary">Salvar</button>
+                  <a href="{% url 'producao:lista_curvas' %}" class="btn btn-secondary ajax-link">Cancelar</a>
+              </form>
+          </div>
+      </div>
+  </div>
 </div>
