--- a/producao/templates/producao/eventos/registrar_evento.html
+++ b/producao/templates/producao/eventos/registrar_evento.html
@@ -1,3 +1,4 @@
+<div id="identificador-tela" data-tela="registrar_evento" class="d-none"></div>
 {% load static %}
 <div class="container-fluid mt-3">
     <h2>{% if form.instance.pk %}Editar Evento de Manejo{% else %}Registrar Novo Evento de Manejo{% endif %}</h2>
