--- a/producao/templates/producao/lotes/lista_lotes.html
+++ b/producao/templates/producao/lotes/lista_lotes.html
@@ -1,6 +1,6 @@
 {% load static %}
 <div class="container-fluid mt-3" id="identificador-tela"
-    data-page="lista_lotes"
+    data-tela="lista_lotes"
     data-entidade-singular="lote"
     data-entidade-plural="lotes"
     data-url-editar="{% url 'producao:editar_lote' pk=0 %}"
