--- a/templates/partials/accounts/criar_usuario.html
+++ b/templates/partials/accounts/criar_usuario.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load widget_tweaks %}
 
-<main id="main-content" class="container-fluid py-4" data-page="criar_usuario">
+<div class="container-fluid py-4" data-page="criar_usuario">
     <!-- 🔔 Mensagens instantâneas (novo padrão escalável) -->
     
   
@@ -110,5 +110,5 @@
       </div>
     </div>
   </div>
-</main>
+</div>
 {% endif %}
