--- a/layout_switcher/templates/layout_switcher/navbar.html
+++ b/layout_switcher/templates/layout_switcher/navbar.html
@@ -9,150 +9,36 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-                <!-- Configurações -->
-                {% if perms.accounts.view_user or perms.auth.view_group %}
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarConfiguracoes" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        ⚙️ Configurações
+              {% for item in dynamic_menu_items %}
+                {% if item.children %}
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle ajax-link" href="#" id="navbarDropdown-{{ forloop.counter }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      {{ item.icon }} {{ item.name }}
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarConfiguracoes">
-                        {% if perms.accounts.view_user %}
-                        <li>
-                            <a class="dropdown-item d-flex justify-content-between" href="#submenu-usuarios-nav" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="submenu-usuarios-nav">
-                                👤 Usuários
-                                <span class="submenu-arrow">▶</span>
-                            </a>
-                            <div class="collapse" id="submenu-usuarios-nav">
-                                <ul class="list-unstyled ms-4">
-                                    {% if perms.accounts.add_user %}
-                                    <li><a class="dropdown-item ajax-link" href="{% url 'accounts:criar_usuario' %}">Novo</a></li>
-                                    {% endif %}
-                                    <li><a class="dropdown-item ajax-link" href="{% url 'accounts:lista_usuarios' %}">Lista</a></li>
-                                </ul>
-                            </div>
-                        </li>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown-{{ forloop.counter }}">
+                      {% for child in item.children %}
+                        {% if child.children %}
+                          <!-- Dropdown de segundo nível, se necessário -->
+                          <li>
+                            <a class="dropdown-item" href="#">{{ child.icon }} {{ child.name }} &raquo;</a>
+                            <ul class="submenu dropdown-menu">
+                              {% for grandchild in child.children %}
+                                <li><a class="dropdown-item ajax-link" href="{{ grandchild.url }}">{{ grandchild.name }}</a></li>
+                              {% endfor %}
+                            </ul>
+                          </li>
+                        {% else %}
+                          <li><a class="dropdown-item ajax-link" href="{{ child.url }}">{{ child.icon }} {{ child.name }}</a></li>
                         {% endif %}
-                        {% if perms.auth.view_group %}
-                        <li>
-                            <a class="dropdown-item d-flex justify-content-between" href="#submenu-grupos-nav" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="submenu-grupos-nav">
-                                🛡️ Grupos
-                                <span class="submenu-arrow">▶</span>
-                            </a>
-                            <div class="collapse" id="submenu-grupos-nav">
-                                <ul class="list-unstyled ms-4">
-                                    {% if perms.auth.add_group %}
-                                    <li><a class="dropdown-item ajax-link" href="{% url 'accounts:cadastrar_grupo' %}">Novo</a></li>
-                                    {% endif %}
-                                    <li><a class="dropdown-item ajax-link" href="{% url 'accounts:lista_grupos' %}">Lista</a></li>
-                                </ul>
-                            </div>
-                        </li>
-                        {% endif %}
+                      {% endfor %}
                     </ul>
-                </li>
+                  </li>
+                {% else %}
+                  <li class="nav-item">
+                    <a class="nav-link" href="{{ item.url }}">{{ item.icon }} {{ item.name }}</a>
+                  </li>
                 {% endif %}
-
-                <!-- Empresas -->
-                {% if perms.empresas.view_empresaavancada %}
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarEmpresas" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        🏢 Empresas
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarEmpresas">
-                        {% if perms.empresas.add_empresaavancada %}
-                        <li><a class="dropdown-item ajax-link" href="{% url 'empresas:cadastrar_empresa_avancada' %}">Cadastrar Empresa</a></li>
-                        {% endif %}
-                        <li><a class="dropdown-item ajax-link" href="{% url 'empresas:lista_empresas_avancadas' %}">Lista de Empresas</a></li>
-                        {% if perms.empresas.add_categoriaempresa %}
-                        <li><a class="dropdown-item ajax-link" href="{% url 'empresas:cadastrar_categoria_avancada_new' %}">Categorias</a></li>
-                        {% endif %}
-                    </ul>
-                </li>
-                {% endif %}
-
-                <!-- Produtos -->
-                {% if perms.produto.view_produto %}
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarProdutos" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        📦 Produtos
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarProdutos">
-                        <li><a class="dropdown-item ajax-link" href="{% url 'produto:cadastrar_produto' %}">Cadadtro Produtos</a></li>
-                        <li><a class="dropdown-item ajax-link" href="{% url 'produto:lista_produtos' %}">Listar Produtos</a></li>
-                        <li><a class="dropdown-item ajax-link" href="{% url 'produto:lista_categorias' %}">Categorias de Produto</a></li>
-                        <li><a class="dropdown-item ajax-link" href="{% url 'produto:lista_unidades' %}">Unidades de Medida</a></li>
-                        <li><a class="dropdown-item ajax-link" href="{% url 'produto:manutencao_ncm' %}">NCM</a></li>
-                    </ul>
-                </li>
-                {% endif %}
-
-                <!-- Produção -->
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarProducao" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        🐟 Produção
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarProducao">
-                        <li><a class="dropdown-item ajax-link" href="{% url 'producao:cadastrar_tanque' %}">Cadastrar Tanque</a></li>
-                        <li><a class="dropdown-item ajax-link" href="{% url 'producao:lista_tanques' %}">Lista de Tanques</a></li>
-                        <li><a class="dropdown-item ajax-link" href="{% url 'producao:importar_curva' %}">Importar Curva</a></li>
-                        <li><a class="dropdown-item ajax-link" href="{% url 'producao:cadastrar_curva' %}">Cadastrar Curva</a></li>
-                        <li><a class="dropdown-item ajax-link" href="{% url 'producao:lista_curvas' %}">Lista de Curvas</a></li>
-                        <li><a class="dropdown-item ajax-link" href="{% url 'producao:cadastrar_lote' %}">Cadastrar Lote</a></li>
-                        <li><a class="dropdown-item ajax-link" href="{% url 'producao:lista_lotes' %}">Lista de Lotes</a></li>
-                        <li><a class="dropdown-item ajax-link" href="{% url 'producao:registrar_evento' %}">Registrar Evento</a></li>
-                        <li><a class="dropdown-item ajax-link" href="{% url 'producao:lista_eventos' %}">Lista de Eventos</a></li>
-                        <li><a class="dropdown-item ajax-link" href="{% url 'producao:registrar_alimentacao' %}">Registrar Alimentação</a></li>
-                        <li><a class="dropdown-item ajax-link" href="{% url 'producao:lista_alimentacao' %}">Lista de Alimentações</a></li>
-                    </ul>
-                </li>
-
-                <!-- Nota Fiscal -->
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarNotaFiscal" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        📄 Nota Fiscal
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarNotaFiscal">
-                        <li><a class="dropdown-item ajax-link" href="{% url 'nota_fiscal:importar_xml' %}">Importar XML</a></li>
-                        <li><a class="dropdown-item ajax-link" href="{% url 'nota_fiscal:lancar_nota_manual' %}">Lançar Nota Manual</a></li>
-                        <li><a class="dropdown-item ajax-link" href="{% url 'nota_fiscal:entradas_nota' %}">Entradas de Nota</a></li>
-                    </ul>
-                </li>
-
-                <!-- Fiscal -->
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarFiscal" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        🧾 Fiscal
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarFiscal">
-                        <li><a class="dropdown-item ajax-link" href="{% url 'fiscal:cfop_list' %}">CFOPs</a></li>
-                        <li><a class="dropdown-item ajax-link" href="{% url 'fiscal:natureza_operacao_list' %}">Naturezas de Operação</a></li>
-                        <li><a class="dropdown-item ajax-link" href="{% url 'fiscal:import_fiscal_data' %}">Importar Dados Fiscais</a></li>
-                        <li>
-                            <a class="dropdown-item d-flex justify-content-between" href="#submenu-fiscal-nav" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="submenu-fiscal-nav">
-                                ⚙️ Configurações Fiscais
-                                <span class="submenu-arrow">▶</span>
-                            </a>
-                            <div class="collapse" id="submenu-fiscal-nav">
-                                <ul class="list-unstyled ms-4">
-                                    <li><a class="dropdown-item ajax-link" href="#">Regras Tributárias (Futuro)</a></li>
-                                    <li><a class="dropdown-item ajax-link" href="#">Status NF-e (Futuro)</a></li>
-                                </ul>
-                            </div>
-                        </li>
-                    </ul>
-                </li>
-
-                <!-- Relatórios -->
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarRelatorios" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        📊 Relatórios
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarRelatorios">
-                        <li><a class="dropdown-item ajax-link" href="{% url 'relatorios:api_nota_detalhada' pk=1 %}">Nota Fiscal</a></li>
-                    </ul>
-                </li>
-
+              {% endfor %}
             </ul>
             <ul class="navbar-nav ms-auto">
                 <!-- Perfil -->
