Refatoração Mensagens OK

--- a/templates/base.html
+++ b/templates/base.html
@@ -183,6 +183,8 @@
     <script defer src="{% static 'js/relatorios/notas_entradas.js' %}"></script>
   {% endblock %}
 
+  {% include 'partials/mensagens_js.html' %}
+
 
 </body>
 
